--- a/fermag.html
+++ b/fermag.html
@@ -54,19 +54,19 @@
 
     <nav class="navBar">
         <div class="logo">
-            <a href="/Fermag"><img src="static/src/clientes/Fermag/logoFermagBlanco.webp" alt="FERMAG S.A." id="logo"></a>
+            <a href="fermag.html"><img src="static/src/clientes/Fermag/logoFermagBlanco.webp" alt="FERMAG S.A." id="logo"></a>
         </div>
 
         <div class="navegacion">   
             <input type="checkbox" class="toogle-menu">
             <div class="hamburguer"></div>
             <ul class="menu" id="menu">
-                <li><a href="/Fermag" class="nav-link">Empresa</a></li>
+                <li><a href="fermag.html" class="nav-link">Empresa</a></li>
                 
                 <li><a href="#obras-servicios" class="nav-link">¿Qué ofrecemos?</a></li>
                 
                 <!--<li><a href="/Fermag/noticias" class="nav-link">Noticias</a></li>-->
-                <li><a href="/Fermag/contacto" class="nav-link">Contacto</a></li>
+                <li><a href="contacto.html" class="nav-link">Contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -117,8 +117,8 @@
                     <div class="menu-adelante">
                         <p>DOMOTICA - BMS - SMART CITY</p>
                         <div class="botones-servicios">
-                            <a href="/Fermag/informacion/servicio/1"><button><span>Ver info</span></button></a>
-                            <a href="/Fermag/servicio/1?titulo=DOMOTICA+-+BMS+-+SMART+CITY"><button><span>Ver obras</span></button></a>
+                            <a href="servicios-dom-info.html"><button><span>Ver info</span></button></a>
+                            <a href="servicios-dom-obras.html"><button><span>Ver obras</span></button></a>
                         </div>
                     </div>
                 </div>
@@ -128,8 +128,8 @@
                     <div class="menu-adelante">
                         <p>ENERGIAS RENOVABLES - UPS</p>
                         <div class="botones-servicios">
-                            <a href="/Fermag/informacion/servicio/2"><button><span>Ver info</span></button></a>
-                            <a href="/Fermag/servicio/2?titulo=ENERGIAS+RENOVABLES+-+UPS"><button><span>Ver obras</span></button></a>
+                            <a href="servicios-er-info.html"><button><span>Ver info</span></button></a>
+                            <a href="servicios-er-obras.html"><button><span>Ver obras</span></button></a>
                         </div>
                     </div>
                 </div>
@@ -139,8 +139,8 @@
                     <div class="menu-adelante">
                         <p>INSTALACIONES ELECTRICAS - SEÑALES DEBILES</p>
                         <div class="botones-servicios">
-                            <a href="/Fermag/informacion/servicio/3"><button><span>Ver info</span></button></a>
-                            <a href="/Fermag/servicio/3?titulo=INSTALACIONES+ELECTRICAS+-+SE%C3%91ALES+DEBILES"><button><span>Ver obras</span></button></a>
+                            <a href="servicios-ie-info.html"><button><span>Ver info</span></button></a>
+                            <a href="servicios-ie-obras.html"><button><span>Ver obras</span></button></a>
                         </div>
                     </div>
                 </div>
@@ -150,8 +150,8 @@
                     <div class="menu-adelante">
                         <p>SOLUCIONES INTEGRALES</p>
                         <div class="botones-servicios">
-                            <a href="/Fermag/informacion/servicio/4"><button><span>Ver info</span></button></a>
-                            <a href="/Fermag/servicio/4?titulo=SOLUCIONES+INTEGRALES"><button><span>Ver obras</span></button></a>
+                            <a href="servicios-si-info.html"><button><span>Ver info</span></button></a>
+                            <a href="servicios-si-obras.html"><button><span>Ver obras</span></button></a>
                         </div>
                     </div>
                 </div>
@@ -224,7 +224,7 @@
             <h2>Contáctanos</h2>
             <div class="footer-contactanos-botones">
                 <div>
-                    <a href="/Fermag/contacto"><img src="static/src/Icons/gmail.svg" alt="aas" class="icono""></a>
+                    <a href="contacto.html"><img src="static/src/Icons/gmail.svg" alt="aas" class="icono""></a>
                 </div>
                 <div>
                     <a href="https://wa.me/5493513992068/?text=Hola%20buenos%20dias!."><img src="static/src/Icons/whatsapp.svg" alt="aas" class="icono""></a>
@@ -242,7 +242,7 @@
             <hr>
             <div class="copyright">
                 <p>Copyright © 2023 | Fermag | </p>
-                <a href="/home">Team Lussary</a>
+                <a href="https://lussary.makeup/">Team Lussary</a>
             </div>
         </div>
     </div>
