--- a/servicios-ie-info.html
+++ b/servicios-ie-info.html
@@ -56,19 +56,19 @@ Fermag S.A.
 
     <nav class="navBar">
         <div class="logo">
-            <a href="/Fermag"><img src="static/src/clientes/Fermag/logoFermagBlanco.webp" alt="FERMAG S.A." id="logo"></a>
+            <a href="fermag.html"><img src="static/src/clientes/Fermag/logoFermagBlanco.webp" alt="FERMAG S.A." id="logo"></a>
         </div>
 
         <div class="navegacion">   
             <input type="checkbox" class="toogle-menu">
             <div class="hamburguer"></div>
             <ul class="menu" id="menu">
-                <li><a href="/Fermag" class="nav-link">Empresa</a></li>
+                <li><a href="fermag.html" class="nav-link">Empresa</a></li>
                 
-                <li><a href="/Fermag?goTo=obras-servicios" class="nav-link">¿Qué ofrecemos?</a></li>
+                <li><a href="fermag.html" class="nav-link">¿Qué ofrecemos?</a></li>
                 
                 <!--<li><a href="/Fermag/noticias" class="nav-link">Noticias</a></li>-->
-                <li><a href="/Fermag/contacto" class="nav-link">Contacto</a></li>
+                <li><a href="contacto.html" class="nav-link">Contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -82,7 +82,7 @@ Fermag S.A.
       <div class="links-title">
         <hr style="width: 15%; justify-content: flex-start;">
         <a href="#informacion">Información</a>
-        <a href="/Fermag/servicio/3">Proyectos</a>
+        <a href="servicios-ie-obras.html">Proyectos</a>
         <hr style="width: 15%; justify-content: flex-end;">
       </div>
     </div>
@@ -131,7 +131,7 @@ Fermag S.A.
             <h2>Contáctanos</h2>
             <div class="footer-contactanos-botones">
                 <div>
-                    <a href="/Fermag/contacto"><img src="static/src/Icons/gmail.svg" alt="aas" class="icono""></a>
+                    <a href="contacto.html"><img src="static/src/Icons/gmail.svg" alt="aas" class="icono""></a>
                 </div>
                 <div>
                     <a href="https://wa.me/5493513992068/?text=Hola%20buenos%20dias!."><img src="static/src/Icons/whatsapp.svg" alt="aas" class="icono""></a>
@@ -149,7 +149,8 @@ Fermag S.A.
             <hr>
             <div class="copyright">
                 <p>Copyright © 2023 | Fermag | </p>
-                <a href="/home">Team Lussary</a>
+            <a href="fermag.html"><img src="static/src/clientes/Fermag/logoFermagBlanco.webp" alt="FERMAG S.A." id="logo"></a>
+                <a href="https://lussary.makeup/">Team Lussary</a>
             </div>
         </div>
     </div>
