--- a/servicios-dom-info.html
+++ b/servicios-dom-info.html
@@ -56,19 +56,19 @@ Fermag S.A.
 
     <nav class="navBar">
         <div class="logo">
-            <a href="/Fermag"><img src="static/src/clientes/Fermag/logoFermagBlanco.webp" alt="FERMAG S.A." id="logo"></a>
+            <a href="fermag.html"><img src="static/src/clientes/Fermag/logoFermagBlanco.webp" alt="FERMAG S.A." id="logo"></a>
         </div>
 
         <div class="navegacion">   
             <input type="checkbox" class="toogle-menu">
             <div class="hamburguer"></div>
             <ul class="menu" id="menu">
-                <li><a href="/Fermag" class="nav-link">Empresa</a></li>
+                <li><a href="fermag.html" class="nav-link">Empresa</a></li>
                 
                 <li><a href="/Fermag?goTo=obras-servicios" class="nav-link">¿Qué ofrecemos?</a></li>
                 
                 <!--<li><a href="/Fermag/noticias" class="nav-link">Noticias</a></li>-->
-                <li><a href="/Fermag/contacto" class="nav-link">Contacto</a></li>
+                <li><a href="contacto.html" class="nav-link">Contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -139,7 +139,7 @@ Fermag S.A.
             <h2>Contáctanos</h2>
             <div class="footer-contactanos-botones">
                 <div>
-                    <a href="/Fermag/contacto"><img src="static/src/Icons/gmail.svg" alt="aas" class="icono""></a>
+                    <a href="contacto.html"><img src="static/src/Icons/gmail.svg" alt="aas" class="icono""></a>
                 </div>
                 <div>
                     <a href="https://wa.me/5493513992068/?text=Hola%20buenos%20dias!."><img src="static/src/Icons/whatsapp.svg" alt="aas" class="icono""></a>
