la concha de mi madre

--- a/servicios-er-info.html
+++ b/servicios-er-info.html
@@ -23,7 +23,7 @@ Fermag S.A.
     
     
 <link rel="stylesheet" href="static/css/clientes/Fermag/proyecto.css">
-<meta charset="UTF-8">
+
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -161,7 +161,7 @@ Fermag S.A.
             <hr>
             <div class="copyright">
                 <p>Copyright © 2023 | Fermag | </p>
-                <a href="https://lussary.makeup/">Team Lussary</a>
+                <a href="https://teamlussary.com.ar/">Team Lussary</a>
             </div>
         </div>
     </div>
