la concha de mi madre

--- a/fermag.html
+++ b/fermag.html
@@ -50,7 +50,7 @@
             
         </div>
     </div>
-    <!-- FIN LOADER -->
+    <!-- END LOADER -->
 
     <nav class="navBar">
         <div class="logo">
