--- a/contacto.html
+++ b/contacto.html
@@ -62,7 +62,7 @@
             <ul class="menu" id="menu">
                 <li><a href="fermag.html" class="nav-link">Empresa</a></li>
                 
-                <li><a href="fermag.html" class="nav-link">¿Qué ofrecemos?</a></li>
+                <li><a href="fermag.html?goTo=obras-servicios" class="nav-link">¿Qué ofrecemos?</a></li>
                 
                 <!--<li><a href="/Fermag/noticias" class="nav-link">Noticias</a></li>-->
                 <li><a href="contacto.html" class="nav-link">Contacto</a></li>
@@ -178,11 +178,7 @@
             <hr>
             <div class="copyright">
                 <p>Copyright © 2023 | Fermag | </p>
-<<<<<<< HEAD
-                <a href="/home">Team Lussary</a>
-=======
                 <a href="https://teamlussary.com.ar/">Team Lussary</a>
->>>>>>> 3623e975c9485b0a04ac736098e0e898abe03ee3
             </div>
         </div>
     </div>
