--- a/servicio/proyecto/11.html
+++ b/servicio/proyecto/11.html
@@ -65,9 +65,8 @@
             <ul class="menu" id="menu">
                 <li><a href="../../fermag.html" class="nav-link">Empresa</a></li>
                 
-                <li><a href="fermag.html" class="nav-link">Obras y Servicios</a></li>
+                <li><a href="../../fermag.html?goTo=obras-servicios" class="nav-link">¿Qué ofrecemos?</a></li>
                 
-                <li><a href="/Fermag/noticias" class="nav-link">Noticias</a></li>
                 <li><a href="../../contacto.html" class="nav-link">Contacto</a></li>
             </ul>
         </div>
