--- a/servicios-ie-obras.html
+++ b/servicios-ie-obras.html
@@ -65,7 +65,7 @@ Fermag S.A.
             <ul class="menu" id="menu">
                 <li><a href="fermag.html" class="nav-link">Empresa</a></li>
                 
-                <li><a href="fermag.html" class="nav-link">¿Qué ofrecemos?</a></li>
+                <li><a href="fermag.html?goTo=obras-servicios" class="nav-link">¿Qué ofrecemos?</a></li>
                 
                 <!--<li><a href="/Fermag/noticias" class="nav-link">Noticias</a></li>-->
                 <li><a href="contacto.html" class="nav-link">Contacto</a></li>
